arregle algunas de las preguntas

--- a/views/home.html
+++ b/views/home.html
@@ -105,7 +105,7 @@
         <h2>2</h2>
       </div>
       <div class="back">
-        <p>¿Tienes experiencia previa como mentor? Si es así, ¿puedes compartir alguna experiencia exitosa que hayas tenido como mentor?</p>
+        <p>¿Tienes experiencia previa como mentor? Si es así, puedes compartirnos ¿Por qué volviste a postularte como mentor y como fué tu experiencia?</p>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
         <h2>3</h2>
       </div>
       <div class="back">
-        <p>¿Cuál es tu enfoque para ayudar a los mentees a establecer y alcanzar sus objetivos profesionales? </p>
+        <p>¿Cómo crees que puedes ayudarnos a lograr nuestros objetivos? </p>
       </div>
     </div>
   </div>
@@ -125,7 +125,7 @@
         <h2>4</h2>
       </div>
       <div class="back">
-        <p>¿Cuál crees que es la cualidad más importante que un mentor debe tener para ser efectivo/a?</p>
+        <p>¿Qué te hubiera gustado saber cuando estabas buscando tu primer trabajo?</p>
       </div>
     </div>
 
@@ -134,7 +134,7 @@
         <h2>5</h2>
       </div>
       <div class="back">
-        <p>¿Qué expectativas tienes de tus mentees? ¿Qué tipo de compromiso o esfuerzo esperas que pongan en la relación de mentoría?</p>
+        <p>¿Qué expectativas tienes de los alumnos del centro Pescar Santander?</p>
       </div>
     </div>
 
@@ -143,7 +143,7 @@
         <h2>6</h2>
       </div>
       <div class="back">
-        <p> ¿Qué te gustaría lograr a través de la mentoría?</p>
+        <p> ¿Qué consejos nos puedes brindar para establecer y lograr nuestras metas de desarrollo personal y profesional?</p>
       </div>
     </div>
   </div>
